<resources>
    <string name="app_name">Starterkit</string>

    <!-- Strings related to login -->
    <string name="prompt_cid">Cid</string>
    <string name="prompt_uid">User Id</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_network">Network</string>
    <string name="prompt_macid">Mac Id</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <!--string name="error_incorrect_password">This password is incorrect</string-->
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="dummy_data">dummy data</string>
    <string name="invalid_cid">Invalid Cid value</string>
    <string name="cid_error_message">CID field is invalid</string>
    <string name="uid_error_message">Uid field is invalid</string>
    <string name="password_error_message">Password is invalid</string>
    <string name="network_error_message">Network field is invalid</string>
    <string name="mac_error_message">Mac field is invalid</string>
    <string name="pref_file_name">smart_home_pref_file</string>
</resources>
